--- a/add_driver.html
+++ b/add_driver.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/fontawesome/fontawesome.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/loader.css">
+    <link rel="stylesheet" type="text/css" href="css/spinner.css">
 
     <script src="js/jquery/jquery.js"></script>
     <script src="js/bootstrap/bootstrap-bundle.js"></script>
@@ -24,6 +24,10 @@
 </head>
 
 <body>
+    <div id="spinner">
+        <img src="images/loader.gif" />
+    </div>
+
     <main class="main-container">
         <section class="p-2 p-md-3 p-lg-5">
             <div class="container">
@@ -76,7 +80,6 @@
     </main>
 
     <script>
-        hide_loader()
         function isNumber(event) {
             event = (event) ? event : window.event;
             var charCode = (event.which) ? event.which : event.keyCode;
@@ -102,7 +105,6 @@
                 alert('Driver mobile number should be 10 digit number')
             } else {
                 e.preventDefault()
-                show_loader()
                 get_access_token(driver_name, driver_mobile_number)
             }
         });
@@ -118,13 +120,15 @@
                 }),
                 contentType: 'application/json; charset=utf-8',
                 dataType: 'json',
+                beforeSend: function () {
+                    showLoader()
+                },
                 success: function (response) {
-                    console.log(response)
+                    hideLoader()
+
                     if (response == null) {
-                        hide_loader()
                         alert(ERROR_RESPONSE_NULL)
                     } else if (response['auth_token'] == null || response['auth_token'] == "") {
-                        hide_loader()
                         alert(ERROR_TOKEN_EMPTY)
                     } else {
                         if (response['code'] == API_SUCCESS_CODE) {
@@ -132,7 +136,6 @@
 
                             call_add_driver(driver_name, driver_mobile_number, token)
                         } else {
-                            hide_loader()
                             if (response['message'] != null && response['message'] != "") {
                                 alert(response['message'])
                             } else {
@@ -142,7 +145,8 @@
                     }
                 },
                 error: function (response) {
-                    hide_loader()
+                    hideLoader()
+
                     if (response['message'] != null && response['message'] != "") {
                         alert(response['message'])
                     } else {
@@ -166,15 +170,17 @@
                 }),
                 contentType: 'application/json; charset=utf-8',
                 dataType: 'json',
+                beforeSend: function () {
+                    showLoader()
+                },
                 success: function (response) {
+                    hideLoader()
                     if (response == null) {
-                        hide_loader()
                         alert(ERROR_RESPONSE_NULL)
                     } else {
                         if (response['code'] == API_SUCCESS_CODE) {
                             get_driver_details_from_fleetos(driver_mobile_number, token)
                         } else {
-                            hide_loader()
                             if (response['message'] != null && response['message'] != "") {
                                 alert(response['message'])
                             } else {
@@ -184,7 +190,8 @@
                     }
                 },
                 error: function (response) {
-                    hide_loader()
+                    hideLoader()
+
                     if (response['message'] != null && response['message'] != "") {
                         alert(response['message'])
                     } else {
@@ -203,9 +210,13 @@
                 url: BASE_URL + ENDPOINT_GET_USER_DETAILS_FROM_FLEETOS + driver_mobile_number,
                 contentType: 'application/json; charset=utf-8',
                 dataType: 'json',
+                beforeSend: function () {
+                    showLoader()
+                },
                 success: function (response) {
+                    hideLoader()
+
                     if (response == null) {
-                        hide_loader()
                         alert(ERROR_RESPONSE_NULL)
                     } else {
                         if (response['code'] == API_SUCCESS_CODE) {
@@ -217,7 +228,6 @@
                                 alert(ERROR_GETTING_DRIVER_ID)
                             }
                         } else {
-                            hide_loader()
                             if (response['message'] != null && response['message'] != "") {
                                 alert(response['message'])
                             } else {
@@ -227,7 +237,8 @@
                     }
                 },
                 error: function (response) {
-                    hide_loader()
+                    hideLoader()
+
                     if (response['message'] != null && response['message'] != "") {
                         alert(response['message'])
                     } else {
@@ -249,15 +260,15 @@
                 },
                 contentType: 'application/json; charset=utf-8',
                 success: function (response) {
+                    hideLoader()
+
                     if (response == null) {
-                        hide_loader()
                         alert(ERROR_RESPONSE_NULL)
                     } else {
                         if (response['code'] == API_SUCCESS_CODE) {
                             window.location.href = 'driver_list.html';
                             alert("Driver added succssfully!")
                         } else {
-                            hide_loader()
                             if (response['message'] != null && response['message'] != "") {
                                 alert(response['message'])
                             } else {
@@ -267,8 +278,8 @@
                     }
                 },
                 error: function (response) {
-                    hide_loader()
-                    console.log(response)
+                    hideLoader()
+
                     if (response['message'] != null && response['message'] != "") {
                         alert(response['message'])
                     } else {
